[tool.poetry]
name = "riskrover"
version = "0.2.0"
description = "Python package"
authors = ["Dorian Van den Heede <dorian@dataroots.io>"]
readme = "README.md"
packages = [{include = "riskrover"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.1"
xgboost = "^3.0.2"
python-dotenv = "^1.1.0"
dbutils = "^3.1.1"
numpy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
