[tool.poetry]
name = "riskrover"
version = "0.1.0"
description = "Python package"
authors = ["Dorian Van den Heede <dorian@dataroots.io>"]
readme = "README.md"
packages = [{include = "riskrover"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
python-dotenv = "^1.0.0"
dbutils = "^3.0.3"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
